# element_homework

./: README.md  main.py  pyproject.toml  requirements.txt
app/routers/: topN.py  top_n.py
app/schemas/: data.py
app/services/: topN.py  top_n.py
app/utils/: exception.py
tests/: test_main.py
