[tool.poetry]
name = "offiste-assignment-u3wfq2p9"
version = "0.1.0"
description = ""
authors = ["Jimmy Huang <jammy1128@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.90.0"
uvicorn = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
httpx = "^0.23.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
